# zach.se

./: .firebaserc  .gitignore  .gitmodules  CNAME  README.md  firebase.json  stack.yaml  zach-se.cabal
drafts/: 2016-10-12-how-to-make-project-fi-work-in-india.markdown  2016-10-13-jaipur-the-local-perspective.markdown
pages/: about.md  project-euler-solutions.md
posts/: 2010-12-05-6-projects-to-get-started-in-diy.markdown  2010-12-06-how-to-convert-your-music-library-to-mp3-on-linux.markdown  2010-12-10-better-way-to-use-google-translate.markdown  2010-12-14-munchausen-numbers-and-how-to-find-them.markdown  2010-12-21-how-to-display-buddypress-album-images-anywhere.markdown  2011-01-20-recover-lost-partitions-with-testdisk.markdown  2011-01-24-buddypress-album-author-template-tags.markdown  2011-02-17-geodesic-distance-between-points-in-geodjango.markdown  2011-02-26-the-essential-guide-to-home-coffee-roasting.markdown  2011-04-12-build-a-media-server-with-ampache-and-transmission.markdown  2011-04-23-generate-audio-with-python.markdown  2011-05-04-around-the-world-in-90-days.markdown  2011-05-10-new-orleans.markdown  2011-05-17-chicago.markdown  2011-05-24-boston-and-cambridge.markdown  2011-05-24-grand-canyon.markdown  2011-05-30-los-angeles.markdown  2011-05-30-seattle.markdown  2011-06-19-minneapolis-and-st-paul.markdown  2011-06-20-san-francisco-and-silicon-valley.markdown  2011-07-16-beijing-and-the-great-wall.markdown  2011-07-19-trans-siberian-railway-beijing-moscow.markdown  2011-07-20-moscow.markdown  2011-07-25-stockholm-uppsala-peace-and-love.markdown  (+17 more)
(+161 files in other folders)
