name:               zach-se
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          bin/hakyll.hs
  build-depends:    base == 4.19.*
                  , hakyll == 4.16.*
                  , pandoc == 3.6.*
                  , filepath == 1.4.*
  ghc-options:      -threaded
  default-language: Haskell2010
